--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -33,7 +33,7 @@
         <div class="intro-lead-in"></div>
         <div class="intro-heading">Vindicatum</div>
         <h4>
-          6/7 Mythic Highmaul
+          6/7 Mythic Highmaul | 0/10 Mythic BRF
         </h4>
       <br>
       <br>
