added chen blackhand pic

--- a/app/assets/stylesheets/_agency.css.scss
+++ b/app/assets/stylesheets/_agency.css.scss
@@ -290,7 +290,7 @@ header {
 }
 
 .kill1 {
-  background: image-url('twins.jpg');
+  background: image-url('chenblackhand.jpg');
   background-attachment: fixed;
   background-position: center center;
   background-repeat: none;
