--- a/app/assets/stylesheets/_agency.css.scss
+++ b/app/assets/stylesheets/_agency.css.scss
@@ -290,7 +290,7 @@ header {
 }
 
 .kill1 {
-  background: image-url('chenblackhand.jpg');
+  background: image-url('maidenkill.jpg');
   background-attachment: fixed;
   background-position: center center;
   background-repeat: none;
@@ -302,7 +302,7 @@ header {
 }
 
 .kill2 {
-  background: image-url('tectus.jpg');
+  background: image-url('chenblackhand.jpg');
   background-attachment: fixed;
   background-position: center center;
   background-repeat: none;
