updated some layout/links. Need updated roster

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,20 +4,17 @@
     <li class="hidden">
       <a href="#page-top"></a>
     </li>
-    <li>
-      <a class="page-scroll" href="#services">Hi</a>
-    </li>
-    <!-- <li>
-    <a class="page-scroll" href="#portfolio">Portfolio</a>
-  </li> -->
-  <!-- <li>
-    <a class="page-scroll" href="#about">History</a>
-  </li> -->
   <li>
     <a class="page-scroll" href="#team">Roster</a>
   </li>
   <li>
+    <a class="page-scroll" href="https://www.warcraftlogs.com/guilds/395">Warcraft Logs</a>
+  </li>
+  <li>
     <a class="page-scroll" href="http://forums.vindicatum.com/index.php">Forums</a>
+  </li>
+  <li>
+    <a class="page-scroll" href="http://forums.vindicatum.com/viewtopic.php?f=5&t=661">About + Apply</a>
   </li>
 </ul>
 </div>
@@ -33,7 +30,7 @@
         <div class="intro-lead-in"></div>
         <div class="intro-heading">Vindicatum</div>
         <h4>
-          6/7 Mythic Highmaul | 0/10 Mythic BRF
+          6/7 Mythic Highmaul | 8/10 Mythic BRF
         </h4>
       <br>
       <br>
@@ -69,16 +66,6 @@
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
           <i class="fa fa-circle fa-stack-2x text-primary"></i>
-          <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Loot Council</h4>
-        <p class="text-muted">Loot is just a means to an end for us. We make use of an Open Loot Council.
-          Gear is given to create the largest impact on the raid. Members discuss drops, and if the upgrade is even, or too close to really call,
-          Officers break the tie based on performance, attendance, and looting history. We trust our raiders to be most interested in improving our raid, not their gear score.</p>
-      </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fa fa-circle fa-stack-2x text-primary"></i>
           <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
         </span>
         <h4 class="service-heading">3-day Strict Schedule.</h4>
@@ -91,12 +78,23 @@
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
           <i class="fa fa-circle fa-stack-2x text-primary"></i>
+          <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4 class="service-heading">Loot Council</h4>
+        <p class="text-muted">Loot is just a means to an end for us. We make use of an Open Loot Council.
+          Gear is given to create the largest impact on the raid. Members discuss drops, and if the upgrade is even, or too close to really call,
+          Officers break the tie based on performance, attendance, and looting history. We trust our raiders to be most interested in improving our raid, not their gear score.</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+          <i class="fa fa-circle fa-stack-2x text-primary"></i>
           <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
         </span>
-        <h4 class="service-heading">Shenanigans</h4>
-        <p class="text-muted">We maintain a competitive raid team on a true three-day-a-week schedule. Lower raid times are no reason to fail to clear all available content in a timely fashion.
-
-          We raid because we enjoy raiding and the people we raid with. That said, our goal as a guild is to progress as quickly and efficiently as possible. When it’s time to get serious, we do so.</p>
+        <h4 class="service-heading">Contact Info</h4>
+        <p class="text-muted">Tanned - GM <br>
+        Powerwaddle - Tank & Meele <br>
+        Arrow - Ranged <br>
+        Espressonoir - Healing</p>
       </div>
     </div>
   </div>
@@ -144,96 +142,6 @@
   </div>
 </section>
 
-
-
-<!-- About Section -->
-<section id="about" >
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">History</h2>
-        <h3 class="section-subheading text-muted">We've been around a while.</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <ul class="timeline">
-          <li>
-            <div class="timeline-image">
-              <%= image_tag 'kaelthas.png', class: "img-circle img-responsive" %>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Burning Crusade</h4>
-                <h4 class="subheading">Sep + Neurth form the supergroup</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">Insert overhyped shit about our beginnings</p>
-              </div>
-            </div>
-          </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <%= image_tag 'm\'uru.jpg.png', class: "img-circle img-responsive" %>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>World 72</h4>
-                <h4 class="subheading">A legend is born</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">We pwn'd Mu'ru or some shit</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="timeline-image">
-              <%= image_tag "wrathnaxx.png", class: "img-circle img-responsive" %>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Wrath of the Lich King</h4>
-                <h4 class="subheading">Came out swingin'</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">We pretty much wrecked. Until shadowtrap. Then we broke up. *sniffle*</p>
-              </div>
-            </div>
-          </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <%= image_tag 'cataclysm.png', class: "img-circle img-responsive" %>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Cataclysm</h4>
-                <h4 class="subheading">A reformation</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">Neurth sounds the trumpets of war, the faithful answer the call.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="timeline-image">
-              <%= image_tag 'garrosh.png', class: "img-circle img-responsive" %>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>MoP</h4>
-                <h4 class="subheading">Lows and Highs</h4>
-              </div>
-              <div class="timeline-body">
-                <p class="text-muted">Some shit happened, and then we pooped on Reminiscence and most of the rest of the world.</p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
 <!-- Team Section -->
 <section id="team" class= "bg-light-gray">
   <div class="container">
@@ -254,12 +162,7 @@
           <p>BattleTag: <span class= "text-muted"><%= officer[:tag]%></span></p>
           <p class="text-muted"><%= officer[:role] %></p>
           <ul class="list-inline social-buttons">
-            <li><a href='http://us.battle.net/wow/en/character/icecrown/<%= officer[:name] %>/advanced'><i class="fa fa-linkedin"></i></a>
-            </li>
-            <li><%= image_tag "#{officer[:class]}.ico", class: "img-roster" %></a>
-            </li>
-            <li><a href='https://www.warcraftlogs.com/rankings/character/<%= officer[:warlogs] %>/latest'><i class="fa fa-linkedin"></i></a>
-            </li>
+            <li><%= image_tag "#{officer[:class]}.ico", class: "img-roster" %></a></li>
           </ul>
         </div>
       </div>
@@ -276,12 +179,7 @@
           <h4><%= member[:name] %></h4>
           <p class="text-muted"><%= member[:role] %></p>
           <ul class="list-inline social-buttons">
-            <li><a href='http://us.battle.net/wow/en/character/icecrown/<%= member[:name] %>/advanced'><i class="fa fa-linkedin"></i></a>
-            </li>
-            <li><%= image_tag "#{member[:class]}.ico", class: "img-roster" %></a>
-            </li>
-            <li><a href='https://www.warcraftlogs.com/rankings/character/<%= member[:warlogs] %>/latest'><i class="fa fa-linkedin"></i></a>
-            </li>
+            <li><%= image_tag "#{member[:class]}.ico", class: "img-roster" %></li>
           </ul>
         </div>
       </div>
