--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -30,7 +30,7 @@
         <div class="intro-lead-in"></div>
         <div class="intro-heading">Vindicatum</div>
         <h4>
-          6/7 Mythic Highmaul | 9/10 Mythic BRF
+          7/7 Mythic Highmaul | 10/10 Mythic BRF
         </h4>
       <br>
       <br>
@@ -148,21 +148,19 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Raid Team</h2>
-        <h3 class="section-subheading text-muted">Armory links on the left WarcraftLogs on the right.</h3>
+        <h3 class="section-subheading text-muted">Current trials are NOT listed.</h3>
       </div>
     </div>
+  
     <div class="col-lg-12 text-center">
-      <h3 class="section-heading">Officers</h3>
+      <h3 class="section-heading">Tanks</h3>
     </div>
-      <!--each loop here -->
-      <% @officers.each do |officer| %>
-      <div class="col-sm-4">
+      <% @tanks.each do |tank| %>
+      <div class="col-sm-4 col-sm-offset-4">
         <div class="team-member">
-          <h4><%= officer[:name] %></h4>
-          <p>BattleTag: <span class= "text-muted"><%= officer[:tag]%></span></p>
-          <p class="text-muted"><%= officer[:role] %></p>
+          <h4><%= tank[:name] %></h4>
           <ul class="list-inline social-buttons">
-            <li><%= image_tag "#{officer[:class]}.ico", class: "img-roster" %></a></li>
+            <li><%= image_tag "#{tank[:class]}.ico", class: "img-roster" %></a></li>
           </ul>
         </div>
       </div>
@@ -171,19 +169,37 @@
       <br>
       <br>
       <div class="col-lg-12 text-center">
-        <h3 class="section-heading">Members</h3>
+        <h3 class="section-heading">Healers</h3>
       </div>
-      <% @members.each do |member| %>
-      <div class="col-sm-4">
+      <% @healers.each do |healer| %>
+      <div class="col-sm-3">
         <div class="team-member">
-          <h4><%= member[:name] %></h4>
-          <p class="text-muted"><%= member[:role] %></p>
+          <h4><%= healer[:name] %></h4>
           <ul class="list-inline social-buttons">
-            <li><%= image_tag "#{member[:class]}.ico", class: "img-roster" %></li>
+            <li><%= image_tag "#{healer[:class]}.ico", class: "img-roster" %></li>
           </ul>
         </div>
       </div>
       <% end %>
+      <br>
+      <br> 
+      <br>
+      <div class="col-lg-12 text-center">
+        <h3 class="section-heading">DPS</h3>
+      </div>
+      <% @dps.each do |dps| %>
+      <div class="col-sm-3">
+        <div class="team-member">
+          <h4><%= dps[:name] %></h4>
+          <ul class="list-inline social-buttons">
+            <li><%= image_tag "#{dps[:class]}.ico", class: "img-roster" %></li>
+          </ul>
+        </div>
+      </div>
+      <% end %>
+      <br>
+      <br>
+      <br>
     </div>
   </section>
 
