--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -126,13 +126,25 @@
         </p>
       </div>
       <div class="col-sm-2">
+        <a href="http://www.twitch.tv/battyone"><%= image_tag "Warlock.ico"%></a>
+        <p>
+          Cryptrot
+        </p>
+      </div>
+      <div class="col-sm-2">
+        <a href="http://www.twitch.tv/fsslgnra"><%= image_tag "DK.ico"%></a>
+        <p>
+          Paleaura
+        </p>
+      </div>
+      <div class="col-sm-2">
         <a href="http://www.twitch.tv/draakken"><%= image_tag "Druid.ico"%></a>
         <p>
           Draakken
         </p>
       </div>
       <div class="col-sm-2">
-        <a href="http://www.twitch.tv/powerwaddlex"><%= image_tag "Paladin.ico"%></a>
+        <a href="http://www.twitch.tv/streamwaddle"><%= image_tag "Warrior.ico"%></a>
         <p>
           Powerwaddle
         </p>
