--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -30,7 +30,7 @@
         <div class="intro-lead-in"></div>
         <div class="intro-heading">Vindicatum</div>
         <h4>
-          13/13 Heroic | 3/13 Mythic
+          4/13 Mythic
         </h4>
       <br>
       <br>
