Updated kill shot/progress

--- a/app/assets/stylesheets/_agency.css.scss
+++ b/app/assets/stylesheets/_agency.css.scss
@@ -290,7 +290,7 @@ header {
 }
 
 .kill1 {
-  background: image-url('Mannoroth.jpg');
+  background: image-url('archimonde.jpg');
   background-attachment: fixed;
   background-position: center center;
   background-repeat: none;
@@ -302,7 +302,7 @@ header {
 }
 
 .kill2 {
-  background: image-url('xhulkill.jpg');
+  background: image-url('Mannoroth.jpg');
   background-attachment: fixed;
   background-position: center center;
   background-repeat: none;
@@ -314,7 +314,7 @@ header {
 }
 
 .kill3 {
-  background: image-url('Council.jpg');
+  background: image-url('xhulkill.jpg');
   background-attachment: fixed;
   background-position: center center;
   background-repeat: none;
@@ -326,7 +326,7 @@ header {
 }
 
 .kill4 {
-  background: image-url('Reaver.jpg');
+  background: image-url('Council.jpg');
   background-attachment: fixed;
   background-position: center center;
   background-repeat: none;
