--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -30,7 +30,7 @@
         <div class="intro-lead-in"></div>
         <div class="intro-heading">Vindicatum</div>
         <h4>
-          12/13 Mythic
+          US 55th Mythic Archimonde
         </h4>
       <br>
       <br>
